--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL:      "https://brendanhurley.co.uk/"
+baseURL:      "https://www.brendanhurley.co.uk/"
 languageCode: "en-gb"
 title:        "Brendan Hurley"
 theme:        "noteworthy"
